k8s/config/services.yml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
  namespace: ld2023
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: be-service
  namespace: ld2023
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
